# Aternos-Control

./: .replit  aternoscontrol.py  pyproject.toml  requirements.txt
