[tool.poetry]
name = "repl_python3_beta_Aternos-Control"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"
discord-py-slash-command = "^3.0.1"
discord-ext-slash = "^0.8.1"
Flask-Compress = "^1.10.1"
gevent = "^21.8.0"
discord = "^1.7.3"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
